<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/user_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_text_placeholder"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPWId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/user_pw_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputLayoutPWId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPWId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPWId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_pw_text_placeholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLoginId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:textColor="@color/black"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputLayoutPWId"
        android:textAllCaps="true"
        />

    <Button
        android:id="@+id/buttonRegisterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginId"
        android:textAllCaps="true"
        />

    <Button
        android:id="@+id/buttonForgotPWId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/button_forgot_pw"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegisterId"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginId"
        android:textAllCaps="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>